# Sonograf_Software

./: .gitignore  CMakeLists.txt  README.md  addons.make  startSonograf.sh
CMake/: Findoscpack.cmake
assets/: calibration.yml
src/: CMakeLists.txt  imageCapture.cpp  imageCapture.h  imageRead.cpp  imageRead.h  main.cpp  ofApp.cpp  ofApp.h  physicalControls.cpp  physicalControls.h  scManager.cpp  scManager.h
src/i2c/: CMakeLists.txt  i2c.h
